[JVMCI] assert(pointee != nullptr) failed: invariant

XMLWordPrintable

    • b20

      Crash seen on libgraal:

      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/workspace/open/src/hotspot/share/jfr/leakprofiler/chains/bfsClosure.cpp:208), pid=21923, tid=18691
      # assert(pointee != nullptr) failed: invariant
      #
      # JRE version: Java(TM) SE Runtime Environment (21.0+1) (fastdebug build 21-galahadstaging+1-LTS-89)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 21-galahadstaging+1-LTS-89, mixed mode, sharing, tiered, jvmci, jvmci compiler, compressed oops, compressed class ptrs, g1 gc, bsd-amd64)
      # Core dump will be written. Default location: core.21923
      #

      This is caused by libgraal clearing (i.e. zeroing) JNI handles[1] while the VM thread may be performing an operation that involves traversing the object graph (e.g. the JFR leakprofiler). Since libgraal executes as JNI native code (i.e. _thread_in_native), the VM thread does not expect it to be mutating JNI handles.

      [1]: https://github.com/openjdk/jdk/blob/b92de54a81a4037a5396509d41de57323212639c/src/jdk.internal.vm.ci/share/classes/jdk/vm/ci/hotspot/IndirectHotSpotObjectConstantImpl.java#L161

            Assignee:
            Douglas Simon
            Reporter:
            Douglas Simon
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: