8317975: [JVMCI] assert(pointee != nullptr) failed: invariant

Reviewed-by: never, thartmann